# OutcomeX

./: .gitignore  HACKATHON_REVIEW.md  LOCAL_BROWSER_DEMO_CN.md  README.md
code/: README.md
code/backend/: .env.example  .env.hashkey-testnet.example  .env.local-demo.example  README.md  alembic.ini  pyproject.toml
code/backend/alembic/: env.py  script.py.mako
code/backend/alembic/versions/: 20260408_01_add_orders_cancelled_at.py  20260409_01_add_self_use_execution_run_fields.py  20260409_02_add_machine_listings.py  20260410_01_add_primary_issuance_tables.py  20260410_02_add_attachments_table.py  20260410_03_rekey_attachments_to_session_scope.py  20260410_04_add_attachment_sessions_table.py  20260410_05_add_attachment_session_expiry.py  20260410_06_add_attachment_session_quota_counters.py  20260412_01_add_pwr_wei_accounting_columns.py
code/backend/app/: __init__.py  main.py
code/backend/app/api/: deps.py  execution_contract.py  router.py
code/backend/app/core/: config.py  container.py
code/backend/app/db/: base.py  session.py
code/backend/app/domain/: accounting.py  benchmark_solutions.py  claim_projection.py  enums.py  models.py  order_truth.py  planning.py  pwr_amounts.py  revenue_amounts.py  rules.py  settlement_projection.py
code/backend/scripts/: prepare_local_browser_demo.py
code/backend/tests/: __init__.py  conftest.py  test_alembic_migrations.py  test_app_boot.py  test_app_startup_guard.py  test_domain_rules.py  test_execution_preview_assets.py  test_order_models.py  test_order_policy_guards.py  test_orders_execution_metadata.py
(+253 files in other folders)
